tests/invalid-syntax/61015_undeclared_variable/undeclared_variable.agu
-- Author: 61015, Filipe Lopes

print(y); 